--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,20 +12,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build the Docker image
-
+    
     - name: Set up Docker Buildx
-    - uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v1
 
     - name: Log in to Docker Hub
-    - uses: docker/login-action@v1
-    - with:
+      uses: docker/login-action@v1
+      with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
-    - uses: docker/build-push-action@v2
-    - with:
+      uses: docker/build-push-action@v2
+      with:
         context: .
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/beerapp:latest
